--- a/practice-HTML-CSS/Projeto-alura/bio.html
+++ b/practice-HTML-CSS/Projeto-alura/bio.html
@@ -10,8 +10,9 @@
         <h1>Sobre mim</h1>
 
         <p>
-        Moro em São Paulo mas atendo clientes do mundo todo. Sou conhecido por fazer produtos de qualidade, durabilidade e que agregam valor para meus clientes.
-        Trabalho usando a web como plataforma, ou seja, respiro HTML5, CSS3 e JavaScript (ou melhor: ECMASCript). Crio sites para todos, seguindo as principais diretivas de acessibilidade, responsividade e web semântica, sem descuidar da qualidade de código.
+        Moro em São Paulo mas atendo clientes do mundo todo. Sou conhecido por fazer produtos de <em>qualidade</em>, <em>durabilidade</em> e que <em>agregam valor</em> para meus clientes.
+        Trabalho usando a web como plataforma, ou seja, respiro HTML5, CSS3 e JavaScript (ou melhor: ECMASCript).
+        Crio sites para todos, seguindo as principais diretivas de acessibilidade, responsividade e web semântica, sem descuidar da qualidade de código.
         </p>
 
         <h2>Como trabalho</h2>
@@ -22,7 +23,8 @@
         </p>
 
         <p>
-        Satisfazer meus clientes é prioridade. Para isso, garanto um processo de desenvolvimento altamente interativo, baseado em feedback contínuo. Não trabalho com escopo fechado: o cliente é que decide quando o produto está pronto.
+        Satisfazer meus clientes é prioridade. Para isso, garanto um processo de desenvolvimento altamente interativo, baseado em feedback contínuo.
+        <strong>Não trabalho com escopo fechado</strong>: o cliente é que decide quando o produto está pronto.
         </p>
         <p>
         Também não trabalho com prazos fechados: qualidade é importante demais para ser sacrificada.
@@ -35,8 +37,10 @@
             -- Manoel Santos, Petrobrás
         </p>
         <p>
-        Já desenvolvi projetos para grandes empresas como BMW, UOL e IBM. Neles, o foco principal era entregar uma experiência imersiva e impactante para o usuário final sem descuidar do desempenho e da acessibilidade da página.
-        Também já fui contratado para transformar grandes portais, como Terra e G1, em páginas responsivas. Fui responsável por renovar o layout, reorganizar o conteúdo e re-escrever o código de forma mais reaproveitável.
+        Já desenvolvi projetos para grandes empresas como BMW, UOL e IBM. Neles, o foco principal era entregar uma experiência imersiva e impactante para o usuário final sem descuidar do
+         desempenho e da acessibilidade da página.
+        Também já fui contratado para transformar grandes portais, como Terra e G1, em páginas responsivas. Fui responsável por renovar o layout, reorganizar o conteúdo e re-escrever o
+        código de forma mais reaproveitável.
         </p>
         <h2>Comunidade</h2>
 
