--- a/practice-HTML-CSS/Projeto-alura/bio.html
+++ b/practice-HTML-CSS/Projeto-alura/bio.html
@@ -2,15 +2,23 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Biografia - João da Silva</title>
         <meta charset="utf-8" />
         <link rel="icon" href="favicon.png" />
-        <title>Biografia - João da Silva</title>
+        <link rel="stylesheet" href="index.css">
+        <!-- carrega a fonte Crimson Text nas versões normal, itálico e negrito -->
+        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,600">
+        <!-- carrega a fonte Open Sans Condensed na versão negrito, -->
+        <!-- que é a única necessária para os cabeçalhos            -->
+        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700">
     </head>
     <body>
         <h1>Sobre mim</h1>
 
         <p>
         Moro em São Paulo mas atendo clientes do mundo todo. Sou conhecido por fazer produtos de <em>qualidade</em>, <em>durabilidade</em> e que <em>agregam valor</em> para meus clientes.
+        </p>
+        <p>
         Trabalho usando a web como plataforma, ou seja, respiro HTML5, CSS3 e JavaScript (ou melhor: ECMASCript).
         Crio sites para todos, seguindo as principais diretivas de acessibilidade, responsividade e web semântica, sem descuidar da qualidade de código.
         </p>
