aula 7, adição do link das redes socias e estilização dos icones.

--- a/bio.html
+++ b/bio.html
@@ -57,6 +57,11 @@
 					<li><a href="contato.html">Contato</a></li>
 				</ul>
 			</nav>
+                <ul>
+                    <li> <a href=" https://github.com/git-joaodasilva"> <img src="github.png" alt="github"> </a> </li>
+                    <li> <a href="https://twitter.com/twitter-joaodasilva"></a> <img src="twitter.png" alt="twitter"> </li>
+                    <li> <a href=" https://br.linkedin.com/pub/linkedin-joao-da-silva/32/4/508"></a> <img src="linkedin.png" alt="linkedin"> </li>
+                </ul>
 		</aside>
 		<footer>
 			&copy; João da Silva 2014
