aula 9, usando Image Replacement

--- a/bio.html
+++ b/bio.html
@@ -59,18 +59,18 @@
 			</nav>
 			<ul class="icones-redes-sociais">
 				<li>
-					<a href="https://github.com/joaodasilva">
-						<img src="github.png" alt="Github">
+					<a class="github" href="https://github.com/joaodasilva">
+						github
 					</a>
 				</li>
 				<li>
-					<a href="https://twitter.com/joaodasilva">
-						<img src="twitter.png" alt="Twitter">
+					<a class="twitter" href="https://twitter.com/joaodasilva">
+						Twitter
 					</a>
 				</li>
 				<li>
-					<a href="https://br.linkedin.com/pub/joão-da-silva/32/4/508">
-						<img src="linkedin.png" alt="LinkedIn">
+					<a class="linkedin" href="https://br.linkedin.com/pub/joão-da-silva/32/4/508">
+						linkedin
 					</a>
 				</li>
 			</ul>
