aula 10, Posicionamento com float e clear

--- a/bio.html
+++ b/bio.html
@@ -13,14 +13,14 @@
 		<main>
 			<h1 class="titulo-principal">Sobre mim</h1>
 
-			<div class="container">
+			<div class="texto">
 				<p>Moro em São Paulo mas atendo clientes do mundo todo. Sou conhecido por fazer produtos de <em>qualidade</em>, <em>durabilidade</em> e que <em>agregam valor</em> para meus clientes.</p>
 
 				<p>Trabalho usando a web como plataforma, ou seja, respiro HTML5, CSS3 e JavaScript (ou melhor: ECMASCript). Crio sites para todos, seguindo as principais diretivas de acessibilidade, responsividade e web semântica, sem descuidar da qualidade de código.</p>
 
 				<h2 class="subtitulo-texto">Como trabalho</h2>
 
-				<blockquote class="citacao-bio">
+				<blockquote class="citacao-bio direita">
 					<p>João é o melhor desenvolvedor front-end com quem já trabalhei. Muito eficiente e muito capaz. Recomendo sem dúvidas!</p>
 					<cite>José Souza, Fiat</cite>
 				</blockquote>
@@ -31,7 +31,7 @@
 
 				<h2 class="subtitulo-texto">Experiência</h2>
 
-				<blockquote class="citacao-bio">
+				<blockquote class="citacao-bio esquerda">
 					<p>João domina as tecnologias como ninguém. Eu apresentava um problema, ele tinha na ponta da língua a solução mais adequada com as tecnologias mais recentes.</p>
 					<cite>Manoel Santos, Petrobrás</cite>
 				</blockquote>
@@ -54,13 +54,13 @@
 					<li><a href="portfolio.html">Portfolio</a></li>
 					<li><a href="bio.html">Sobre mim</a></li>
 					<li><a href="blog.html">Blog</a></li>
-					<li><a href="contato.html">Contato</a></li>
+					<li><a href="contato.html">Contato</a></li> 
 				</ul>
 			</nav>
 			<ul class="icones-redes-sociais">
 				<li>
 					<a class="github" href="https://github.com/joaodasilva">
-						github
+						Github
 					</a>
 				</li>
 				<li>
@@ -70,7 +70,7 @@
 				</li>
 				<li>
 					<a class="linkedin" href="https://br.linkedin.com/pub/joão-da-silva/32/4/508">
-						linkedin
+						LinkedIn
 					</a>
 				</li>
 			</ul>
