--- a/bio.html
+++ b/bio.html
@@ -3,9 +3,10 @@
 	<head>
 		<title>Biografia - João da Silva</title>
 		<meta charset="utf-8">
-		<link rel="icon" href="favicon.png">
-		<link rel="stylesheet" href="reset.css">
-		<link rel="stylesheet" href="index.css">
+		<link rel="icon" href="img/favicon.png">
+		<link rel="stylesheet" href="css/reset.css">
+		<link rel="stylesheet" href="css/index.css">
+		<link rel="stylesheet" href="css/bio.css">
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,600">
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700">
 	</head>
@@ -45,7 +46,7 @@
 				<p>Procuro repassar meu conhecimento para a comunidade. Para isso, já dei <a href="portfolio.html">diversas palestras</a> e mantenho um <a href="blog.html">blog</a>.</p>
 			</div>
 		</main>
-		<img src="eu.jpg" alt="Foto de João da Silva" class="minha-foto">
+		<img src="img/eu.jpg" alt="Foto de João da Silva" class="minha-foto">
 		<aside class="navegacao-site">
 			<h1>João da Silva</h1>
 			<nav>
@@ -54,7 +55,7 @@
 					<li><a href="portfolio.html">Portfolio</a></li>
 					<li><a href="bio.html">Sobre mim</a></li>
 					<li><a href="blog.html">Blog</a></li>
-					<li><a href="contato.html">Contato</a></li> 
+					<li><a href="contato.html">Contato</a></li>
 				</ul>
 			</nav>
 			<ul class="icones-redes-sociais">
